dark mode menu fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,14 +24,14 @@ html {
   --ifm-menu-color-background-active: var(--ifm-color-secondary);
   --ifm-menu-color-active: var(--ifm-font-color-base);
 
+  --ifm-menu-link-padding-vertical: 0.6rem;
+  --ifm-menu-link-padding-horizontal: 1rem;
+
   --ifm-card-background-color: #f0f7f9;
   --ifm-card-border-radius: 0.25rem;
 
   --ifm-footer-background-color: #1c1b1f;
   --ifm-footer-color: #fff;
-
-  --ifm-menu-link-padding-vertical: 0.6rem;
-  --ifm-menu-link-padding-horizontal: 1rem;
 
   --ifm-h1-font-size: 2rem;
   --ifm-h2-font-size: 1.5rem;
@@ -50,7 +50,9 @@ html[data-theme="dark"] {
   --ifm-background-color: #1c1b1f;
 
   --ifm-card-background-color: var(--ifm-background-surface-color);
-  --ifm-menu-color-active: var(--ifm-background-color);
+
+  --ifm-menu-color-background-hover: var(--ifm-background-surface-color);
+  --ifm-menu-color-background-active: var(--ifm-background-surface-color);
 }
 
 @-ms-viewport {
@@ -171,7 +173,7 @@ html[data-theme="dark"] {
 }
 
 .menu__link:hover {
-  @apply text-gray-900;
+  @apply text-gray-900 dark:text-gray-100;
 }
 
 /* Theme Footer adjustments */
